repairing of views scrollbars and positioning the map correctly

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -100,6 +100,7 @@ box-shadow: -15px 13px 20px 3px rgba(0,0,0,0.91);
   padding-right: 15px;
   height: 560px;
   box-shadow: 6px 0px 5px 0px rgba(0,0,0,0.91);
+  overflow-y:scroll;
 }
 
 .span3 {
@@ -133,9 +134,19 @@ box-shadow: -15px 13px 20px 3px rgba(0,0,0,0.91);
   margin-right: 0px;
   padding-bottom: 10px;
   padding-left: 0px;
-  padding-right: 15px;
+  padding-right: 0px;
   overflow-y:scroll;
-  
+  height: 500px;
+}
+
+.span10 {
+  margin-left: 0px;
+  margin-right: 0px;
+  padding-bottom: 10px;
+  padding-left: 0px;
+  padding-right: 0px;
+  overflow-y:scroll;
+  height: 500px;
 }
 
 .span12 {
@@ -145,6 +156,7 @@ box-shadow: -15px 13px 20px 3px rgba(0,0,0,0.91);
   padding-bottom: 10px;
   padding-left: 0px;
   padding-right: 15px;
+  overflow-y:scroll;
   height: 550px;
   width:1365px;
 
